--- a/jogo7.html
+++ b/jogo7.html
@@ -16,6 +16,12 @@
     <iframe src="https://scratch.mit.edu/projects/1197008919/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
   <div class="bloco">
+    <h2>Sprites</h2>
+    <pre>
+        <a href="./sprites/jogo7/">Clique Aqui para baixar os sprites do jogo</a>
+    </pre>    
+  </div>
+  <!-- <div class="bloco">
     <h2>🐍 Personagem - Snake</h2>
     <pre>
 quando [bandeira verde] for clicado
@@ -92,7 +98,7 @@ vá para [posição aleatória]
 mostre
     </pre>
     <p class="explicacao">👉 Quando inicia ou quando recebe “pegou”, troca de posição.</p>
-  </div>
+  </div> -->
  
   <div class="bt">
     <button class="voltar">
