modificado arquivo dos sprites

--- a/jogo7.html
+++ b/jogo7.html
@@ -18,7 +18,7 @@
   <div class="bloco">
     <h2>Sprites</h2>
     <pre>
-        <a href="./sprites/sprites jogo 7.zip">Clique Aqui para baixar os sprites do jogo</a>
+        <a href="./sprites/Arquivos do jogo7.zip">Clique Aqui para baixar os aquivos do jogo</a>
     </pre>    
   </div>
 
