--- a/jogo7.html
+++ b/jogo7.html
@@ -26,7 +26,7 @@
     <h2>🔵 p1 idle</h2>
   </div>
   <pre>
-    quando [bandeira verde v] for clicado
+    quando [bandeira verde] for clicado
     vá para x: (-36) y: (-86)
     sempre
       próxima fantasia
@@ -94,7 +94,7 @@
     <h2>🟢 p2 idle</h2>
   </div>
   <pre>
-    quando [bandeira verde v] for clicado
+    quando [bandeira verde] for clicado
     vá para x: (36) y: (-86)
     sempre
       próxima fantasia
