removendo coment do botão no jogo 6

--- a/jogo6.html
+++ b/jogo6.html
@@ -98,9 +98,9 @@ mostre
     <button class="voltar">
       <a href="./jogo5.html">Voltar</a>
   </button>
-    <!-- <button class="avancar">
-      <a href="./jogo6.html">Avançar</a>
-  </button> -->
+    <button class="avancar">
+      <a href="./jogo7.html">Avançar</a>
+  </button>
   </div>
   <script src="./script.js"></script>
 
