--- a/jogo7.html
+++ b/jogo7.html
@@ -46,7 +46,6 @@
     fim
   </pre>
   <p class="explicacao">👉 O personagem P1 idle é o personagem que fica parado, mas com a animação de respiração.</p>
-  <p class="explicacao">👉 Ele sempre está na posição inicial, que é a posição de respiração.</p>
   <p class="explicacao">👉 Ele só fica visível quando não está se movendo.</p>
   <p class="explicacao">👉 Se ele tocar no inimigo, ele se esconde e transmite a mensagem de que o P2 ganhou.</p>
   <div class="bloco">
@@ -82,7 +81,6 @@
       se tocar na borda, volte
     </pre>
     <p class="explicacao">👉 O personagem P1 run é o personagem que corre, com a animação de corrida.</p>
-    <p class="explicacao">👉 Ele sempre está na posição inicial, que é a posição de corrida.</p>
     <p class="explicacao">👉 Ele só fica visível quando está se movendo.</p>
     <p class="explicacao">👉 Se ele tocar no inimigo, ele se esconde e transmite a mensagem de que o P2 ganhou.</p>
     <p class="explicacao">👉 A direção do personagem é controlada pelas teclas "D" e "A".</p>
@@ -114,7 +112,6 @@
     fim
   </pre>
   <p class="explicacao">👉 O personagem P2 idle é o personagem que fica parado, mas com a animação de respiração.</p>
-  <p class="explicacao">👉 Ele sempre está na posição inicial, que é a posição de respiração.</p>
   <p class="explicacao">👉 Ele só fica visível quando não está se movendo.</p>
   <p class="explicacao">👉 Se ele tocar no inimigo, ele se esconde e transmite a mensagem de que o P1 ganhou.</p>
   <div class="bloco">
@@ -150,7 +147,6 @@
       se tocar na borda, volte
     </pre>
     <p class="explicacao">👉 O personagem P2 run é o personagem que corre, com a animação de corrida.</p>
-    <p class="explicacao">👉 Ele sempre está na posição inicial, que é a posição de corrida.</p>
     <p class="explicacao">👉 Ele só fica visível quando está se movendo.</p>
     <p class="explicacao">👉 Se ele tocar no inimigo, ele se esconde e transmite a mensagem de que o P1 ganhou.</p>
     <p class="explicacao">👉 A direção do personagem é controlada pelas teclas "L" e "J".</p>
@@ -223,15 +219,18 @@
           mude o cenario para [p2 win]
         fim
     </pre>
+    <p class="explicacao">👉 O cenário é o fundo do jogo.</p>
+    <p class="explicacao">👉 Ele muda para o cenário de vitória quando um dos jogadores ganha.</p>
+    <p class="explicacao">👉 O som "three red hearts - box jump" é tocado durante o jogo.</p>
 
-
+  </div>
  
   <div class="bt">
     <button class="voltar">
       <a href="./jogo6.html">Voltar</a>
   </button>
     <!-- <button class="avancar">
-      <a href="./jogo6.html">Avançar</a>
+      <a href="./jogo8.html">Avançar</a>
   </button> -->
   </div>
   <script src="./script.js"></script>
