--- a/jogo3.html
+++ b/jogo3.html
@@ -14,7 +14,7 @@
   <h1 class="tit">📘 Documentação do Projeto - Jogo de pegar frutas</h1>
 
   <div class="image">
-    <img src="./img/pegaFruta.PNG" alt="Personagem One Piece">
+    <iframe src="https://scratch.mit.edu/projects/1197614606/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
 
   <div class="bloco">
