--- a/jogo4.html
+++ b/jogo4.html
@@ -13,7 +13,7 @@
       </div>
   <h1 class="tit">📘 Documentação do Projeto - Space Invaders</h1>
   <div class="image">
-    <img src="./img/spaceInvaders.PNG" alt="Personagem One Piece">
+    <iframe src="https://scratch.mit.edu/projects/1197619350/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
   <div class="bloco">
     <h2>👽 Inimigos - Clones</h2>
