--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>📘 Documentação do Projeto - Jogo Dino</h1>
 
   <div class="image">
-    <img src="./img/dino.PNG" alt="">
+    <iframe src="https://scratch.mit.edu/projects/1197613734/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
 
   <div class="bloco">
