--- a/jogo5.html
+++ b/jogo5.html
@@ -13,7 +13,7 @@
       </div>
   <h1 class="tit">📘 Documentação do Projeto - Labirinto</h1>
   <div class="image">
-    <img src="./img/maze.PNG" alt="Personagem One Piece">
+    <iframe src="https://scratch.mit.edu/projects/1197621049/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
   <div class="bloco">
     <h2>🌳 Labirinto - Mapa</h2>
