--- a/jogo6.html
+++ b/jogo6.html
@@ -13,7 +13,7 @@
       </div>
   <h1 class="tit">📘 Documentação do Projeto - Snake</h1>
   <div class="image">
-    <img src="./img/cobrinha.PNG" alt="Personagem One Piece">
+    <iframe src="https://scratch.mit.edu/projects/1197622097/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div>
   <div class="bloco">
     <h2>🐍 Personagem - Snake</h2>
