--- a/jogo7.html
+++ b/jogo7.html
@@ -229,9 +229,9 @@
     <button class="voltar">
       <a href="./jogo6.html">Voltar</a>
   </button>
-    <!-- <button class="avancar">
+    <button class="avancar">
       <a href="./jogo8.html">Avançar</a>
-  </button> -->
+  </button>
   </div>
   <script src="./script.js"></script>
 
