--- a/jogo8.html
+++ b/jogo8.html
@@ -152,7 +152,7 @@
       sempre
           mova (2) passos
           se tocar na borda volte
-          se <tocando em [laser]> então
+          se < tocando em [laser] > então
             toque o som [explosão]
             adicione (1) a [Meteoros destruídos]
             repita (8) vezes
@@ -182,12 +182,12 @@
           vá para x: (230) y: (número aleatório entre (-170) e (170))    
         se <(lado) = (4)> então
           vá para x: (número aleatório entre (-230) e (230)) y: (-170)    
-        aponte para [nave v]    
+        aponte para [nave]    
         sempre
           mova (2) passos
-          se <tocando em [laser v]> então
-            toque o som [explosão v]
-            adicione (1) a [Meteoros destruídos v]
+          se < tocando em [laser] > então
+            toque o som [explosão]
+            adicione (1) a [Meteoros destruídos]
             repita (8) vezes
               próxima fantasia
             apague este clone
