--- a/jogo8.html
+++ b/jogo8.html
@@ -187,10 +187,10 @@
           espere (0.1) seg
         fim
     </pre>
-      <p>🚀 Este script define o comportamento de um meteoro quando ele aparece como um clone.</p>
-      <p>👉 Ele aparece em uma das 4 bordas da tela, escolhida aleatoriamente, e aponta para a nave do jogador.</p>
-      <p>👉 Em seguida, começa a se mover continuamente em direção à nave.</p>
-      <p>👉 Se for atingido por um laser, ele toca um som de explosão, aumenta a contagem de meteoros destruídos, troca rapidamente de fantasia (para criar o efeito da explosão) e então desaparece (clone apagado).</p>
+      <p>🛰️ Este script controla a aparência e o comportamento de um painel de pontuação (ou mensagem) no Scratch.</p>
+      <p>✅ Quando o jogo começa (<strong>bandeira verde</strong>), o painel é escondido, redimensionado para 100%, a variável "Meteoros destruídos" é zerada e também escondida.</p>
+      <p>💥 Quando o jogo termina (ao receber o sinal <strong>"game over"</strong>), o painel aparece na tela junto com a variável de pontuação.</p>
+      <p>🔁 Em seguida, ele entra em um efeito visual de pulsação: o tamanho aumenta e diminui repetidamente, criando um destaque animado para o painel.</p>
   </div>
 
 
