--- a/jogo8.html
+++ b/jogo8.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercícios</title>
-  <link rel="stylesheet" href="./jogo7.css">
+  <link rel="stylesheet" href="./jogo8.css">
   <link rel="icon" type="image/png" href="./img/logo0remov.png">
 </head>
 <body>
@@ -216,9 +216,9 @@
     <button class="voltar">
       <a href="./jogo7.html">Voltar</a>
   </button>
-    <!-- <button class="avancar">
+    <button class="avancar">
       <a href="./jogo9.html">Avançar</a>
-  </button> -->
+  </button>
   </div>
   <script src="./script.js"></script>
 
